--- a/oehealth_idn/views/medical_evaluation_view.xml
+++ b/oehealth_idn/views/medical_evaluation_view.xml
@@ -6,7 +6,7 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="oehealth.oeh_medical_evaluation_view"/>
         <field name="arch" type="xml">
-            <xpath expr="/form/sheet//group[2]" position="after">
+            <xpath expr="//notebook/page[2]/group[1]" position="before">
                 <group string="Subjective">
                     <field name="subjective"/>
                 </group>
