--- a/oehealth_idn/views/prescription_view.xml
+++ b/oehealth_idn/views/prescription_view.xml
@@ -160,6 +160,7 @@
                                 <field name="insurance" placeholder="Insurance" domain="[('patient','=',patient), ('state','=','Active')]" context="{'default_patient': patient, 'default_state': 'Active'}" attrs="{'invisible': [('payment','!=','Insurance')], 'required': [('payment','=','Insurance')]}" class="oe_inline" nolabel="1"/>
                                 <field name="employee_id" placeholder="Employee" domain="[('patient','=',patient), ('state','=','Active')]" attrs="{'invisible': [('payment','!=','Employee')], 'required': [('payment','=','Employee')], 'readonly': [('state','not in',('Draft', 'Scheduled'))]}" class="oe_inline" nolabel="1"/>
                             </div>
+                            <field name="payment_guarantor_discount_id" readonly="1"/>
                         </group>
                     </group>
                     <notebook>
