--- a/oehealth_idn/views/stock_pack_operation_views.xml
+++ b/oehealth_idn/views/stock_pack_operation_views.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <record id="view_pack_operation_lot_form_inherit" model="ir.ui.view">
+    <!-- <record id="view_pack_operation_lot_form_inherit" model="ir.ui.view">
         <field name="name">stock.pack.operation.lots.form.inherit</field>
         <field name="model">stock.pack.operation</field>
         <field name="inherit_id" ref="stock.view_pack_operation_lot_form"/>
@@ -8,5 +8,5 @@
                 <field name="life_date" readonly="1"/>
             </xpath>     
         </field>
-    </record>
+    </record> -->
 </odoo>
