--- a/oehealth_idn/views/unit_registration_view.xml
+++ b/oehealth_idn/views/unit_registration_view.xml
@@ -88,6 +88,7 @@
                                 <field name="insurance" placeholder="Insurance" attrs="{'invisible': [('payment','!=','Insurance')], 'required': [('payment','=','Insurance')]}" class="oe_inline" nolabel="1"/>
                                 <field name="employee_id" placeholder="Employee" domain="[('patient','=',patient), ('state','=','Active')]" attrs="{'invisible': [('payment','!=','Employee')], 'required': [('payment','=','Employee')], 'readonly': [('state','not in',('Draft', 'Scheduled'))]}" class="oe_inline" nolabel="1"/>
                             </div>
+                            <field name="payment_guarantor_discount_id" readonly="1"/>
                             <field name="remarks" placeholder="Remarks"/>
                         </group>
                         <group attrs="{'invisible': [('type', '!=', 'Out-Patient')]}">
