--- a/oehealth_idn/views/prescription_view.xml
+++ b/oehealth_idn/views/prescription_view.xml
@@ -35,13 +35,18 @@
                                 <button type="object" name="confirm_order" string="Confirm Order" states="draft" class="oe_highlight"/>
                                 <field name="state" widget="statusbar" statusbar_visible="draft,done"/>
                             </header>
+                            <!-- <div class="oe_button_box" name="button_box">
+                                <button class="oe_stat_button" type="object" name="" icon="fa-building-o">
+                                    <field string="Stock on hand" name="" widget="statinfo"/>
+                                </button>
+                            </div> -->
                             <group>
                                 <group>
                                     <field name="product_id" required="1" domain="[('is_concoction','=',True)]"/>
                                     <field name="doctor_id" required="1"/>
                                     <label for="qty" string="Quantity"/>
                                     <div>
-                                        <field name="qty" class="oe_inline" required="1" style="width:25% !important"/> for
+                                        <field name="qty" class="oe_inline" required="1" style="width:25% !important"/>
                                         <field name="qty_unit" class="oe_inline" style="width:18% !important"/>
                                         <field name="product_uom" class="oe_inline" style="width:47% !important"/>
                                     </div>
