--- a/bm_operating_unit_health/views/unit_view.xml
+++ b/bm_operating_unit_health/views/unit_view.xml
@@ -42,8 +42,29 @@
             <tree>
                 <field name="name"/>
                 <field name="type"/>
+                <field name="operating_id"/>
                 <field name="unit_remarks"/>
             </tree>
+        </field>
+    </record>
+
+
+    <record id="view_unit_administration_filter" model="ir.ui.view">
+        <field name="name">Unit Administration Search</field>
+        <field name="model">unit.administration</field>
+        <field name="type">search</field>
+        <field name="arch" type="xml">
+            <search string="Search Unit Administrations">
+                <separator orientation="vertical"/>
+                    <field name="name" select="1"/>
+                    <field name="type" string="Type" select="1"/>
+                    <field name="operating_id" string="Operating Unit" select="1"/>
+                <newline/>
+                <group expand="0" string="Group By..." colspan="11" col="11">
+                    <filter string="Operating Unit" name="operating_id_group" context="{'group_by':'operating_id'}"/>
+                    <filter string="Type" name="type_group" context="{'group_by':'type'}"/>
+                </group>
+            </search>
         </field>
     </record>
 
@@ -52,6 +73,7 @@
         <field name="res_model">unit.administration</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{'search_default_operating_id_group': 1}</field>
     </record>
 
     <!-- Inherit Operting Unit 
