--- a/oehealth_idn/views/unit_registration_view.xml
+++ b/oehealth_idn/views/unit_registration_view.xml
@@ -77,7 +77,8 @@
                             <field name="queue"/>
                             <field name="queue_no" invisible="1"/>
                             <field name="type" invisible="1"/>
-                            <field name="unit" required="1" domain="[('type', '=', type)]"/>
+                            <field name="operating_unit_id" invisible="1"/>
+                            <field name="unit" required="1" domain="[('type', '=', type),('operating_id','=', operating_unit_id)]"/>
                             <field name="doctor" attrs="{'required': [('is_medical_record','=',True)]}" domain="['|', ('unit_ids', '=', unit), ('id', '=', doctor_reference)]"/>
                             <field name="is_medical_record" invisible="1"/>
                             <label for="payment" string="Payment Guarantor"/>
